New files added - [] Files modified - [ManageForms.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -30,7 +30,7 @@
                                 <wm-layoutgrid name="layoutgrid3">
                                     <wm-gridrow name="gridrow6">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="1em unset 2em unset">
-                                            <wm-grid title="" dataset="bind:Variables.ExecuteGetFormsForMunicpality.dataSet" navigation="Classic" name="gridFormTypes">
+                                            <wm-grid title="" dataset="bind:Variables.ExecuteGetFormsForMunicpality.dataSet" navigation="Classic" name="gridFormTypes" filtermode="multicolumn">
                                                 <wm-grid-column binding="ID" caption="Id" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="FormType" caption="Form Type" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="CreatedDate" caption="Created Date" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
