--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -10,10 +10,15 @@
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" itemlabel="label" itemicon="icon" itemlink="link" name="breadcrumb1"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow18_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn32_1">
-                        <wm-accordion name="accordion1">
-                            <wm-accordionpane name="accordionpane1" title="FormInfo">
+                <wm-gridrow name="gridrow25_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1">
+                        <wm-label padding="unset 0.5em" name="label2_1" caption="Edit Form" fontweight="bold" fontsize="22"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow26_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn58_1" padding="2em 2em unset 0.5em">
+                        <wm-tabs name="tabs1">
+                            <wm-tabpane name="tabpaneFORMINFO" title="FORM INFO">
                                 <wm-liveform novalidate="false" errormessage="" title="bind:Variables.ReadFormType.dataSet.data[$i].formType" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateFormTypes.dataSet" captionalign="left" captionposition="top"
                                 name="liveformUpdateFormType" backgroundcolor="#dbdbdb" margin="unset 2em">
                                     <wm-layoutgrid columns="2" name="layoutgrid2">
@@ -126,8 +131,8 @@
                                     <wm-form-field name="createdDate" displayname="Created Date" show="false" primary-key="false" generator="assigned" key="createdDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
                                     <wm-form-action key="save" display-name="Update" show="true" class="form-save btn-success" iconclass="wi wi-update" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                 </wm-liveform>
-                            </wm-accordionpane>
-                            <wm-accordionpane name="accordionpane2" title="Statuses">
+                            </wm-tabpane>
+                            <wm-tabpane name="tabpaneSTATUS" title="STATUS">
                                 <wm-livegrid formlayout="dialog" name="livegrid1">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="Formstatuses List" dataset="bind:Variables.StatusesData.dataSet" navigation="Basic" name="grid1">
                                         <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
@@ -221,8 +226,8 @@
                                         <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                     </wm-liveform>
                                 </wm-livegrid>
-                            </wm-accordionpane>
-                            <wm-accordionpane name="accordionpane3" title="Categories">
+                            </wm-tabpane>
+                            <wm-tabpane name="tabpaneCATEGORIES" title="CATEGORIES">
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow26">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn53" padding="unset unset unset 1em">
@@ -265,8 +270,9 @@
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
-                            </wm-accordionpane>
-                        </wm-accordion>
+                            </wm-tabpane>
+                            <wm-tabpane name="tabpaneCXADMIN" title="CX ADMIN"></wm-tabpane>
+                        </wm-tabs>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
